Finalize search integration and configuration